Give the time a fixed with so the score panel doesn't shift around constantly

--- a/css/app.css
+++ b/css/app.css
@@ -96,6 +96,11 @@ li {
     margin-bottom: 10px;
 }
 
+.score-panel .duration {
+  width: 160px;
+  display: inline-block;
+}
+
 .score-panel .stars {
     padding: 0;
     display: inline-block;
